--- a/QualityEdQ1/src/main/resources/static/empowerment.css
+++ b/QualityEdQ1/src/main/resources/static/empowerment.css
@@ -3,3 +3,53 @@ body{
     background-color: coral;
     margin: 0px;
 }
+.wrapper{
+    width:960px;
+    margin:15px auto;
+    text-align:left;
+    background-color: white;
+    border: 20px solid #254117; 
+}
+h1, h2{
+        text-align: center;
+}
+header{
+        border-style: solid;
+        border-width: 2px;
+        padding: 20px;
+        height: 240px;
+}
+header img{
+        float: left;  
+}
+header h1{
+        margin-top: 0px;        
+        margin-bottom: 5px;  
+        font-size:48px;    
+        color: black;          
+}
+.header_container{
+        background-color: white;
+        height: 200px;
+        border: 20px black solid;
+}
+nav{
+        clear: left;    
+        background: gold;
+        border-style: solid;
+        border-width: 2px;
+        border-color: black;
+        padding: 5px 10px;  
+}
+nav ul{
+       padding-left: 20px;
+}
+nav li{          
+        display: inline-block;     
+        list-style: none; 
+        padding: 10px;
+        font-weight: bold;
+        font-size: 24px;
+        text-align: center;  
+        width: 150px;
+}
